# content-security-policy

./: Cargo.toml  README.md
.cursor/rules/: rust.mdc
.github/workflows/: release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: directive.rs  error.rs  lib.rs  parser.rs  policy.rs  specification.rs
crates/parser/tests/: csp3_compliance.rs
docs/: api-design.md  compliance.md
src/: directive.rs  lib.rs  policy.rs
tests/: csp3_compliance.rs
