[package]
name = "parser"
version = "0.1.0"
edition = "2024"
description = "A zero-copy, safe Content Security Policy (CSP) Level 3 parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/damien/content-security-policy"
documentation = "https://docs.rs/parser"
readme = "README.md"
keywords = ["content-security-policy", "csp", "security", "parser", "nom"]
categories = ["parser-implementations", "security"]

[dependencies]
nom = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }